--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
 	"files": [
 		"dist"
 	],
-	"main": "./dist/index.umd.js",
-	"module": "./dist/index.js",
+	"main": "./dist/index.mjs",
+	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
-			"import": "./dist/index.js",
-			"require": "./dist/index.js"
+			"types": "./dist/index.d.ts",
+			"import": "./dist/index.mjs",
+			"require": "./dist/index.cjs"
 		}
 	},
 	"scripts": {
-		"build": "npx tsc"
+		"build": "npx unbuild",
+		"prepublish": "npm run build"
 	},
 	"repository": {
 		"type": "git",
@@ -38,8 +40,9 @@
 	"homepage": "https://github.com/donnikitos/vite-plugin-html-inject#readme",
 	"dependencies": {},
 	"devDependencies": {
-		"typescript": "^4.7.4",
 		"@types/node": "^18.0.5",
+		"typescript": "^4.7.4",
+		"unbuild": "^0.7.4",
 		"vite": "^3.0.0"
 	}
 }
