--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
 	"files": [
 		"dist"
 	],
+	"type": "module",
 	"main": "./dist/index.mjs",
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.mjs",
-			"require": "./dist/index.cjs"
+		  "require": {
+			"types": "./dist/index.d.cts",
+			"default": "./dist/index.cjs"
+		  },
+		  "import": {
+			"types": "./dist/index.d.mts",
+			"default": "./dist/index.mjs"
+		  },
+		  "types": "./dist/index.d.ts",
+		  "default": "./dist/index.mjs"
 		}
-	},
+	  },
 	"scripts": {
 		"build": "npx unbuild",
 		"prepack": "npm run build"
@@ -39,11 +47,11 @@
 		"url": "https://github.com/donnikitos/vite-plugin-html-inject/issues"
 	},
 	"homepage": "https://github.com/donnikitos/vite-plugin-html-inject#readme",
-	"dependencies": {},
 	"devDependencies": {
 		"@types/node": "^18.0.5",
-		"typescript": "^4.7.4",
-		"unbuild": "^0.7.4",
+		"typescript": "^5.3.2",
+		"unbuild": "^2.0.0",
 		"vite": "^3.0.0"
-	}
+	},
+	"packageManager": "yarn@4.0.2"
 }
